--- a/home.html
+++ b/home.html
@@ -151,7 +151,7 @@
             </header>
     <main class="container">
         <div class="product">
-            <img src="product1.jpg" alt="Product 1">
+            <a href="https://www.apple.com/shop/buy-iphone/iphone-13?afid=p238%7CswCdQ4JLQ-dc_mtid_1870765e38482_pcrid_646271113868_pgrid_142651389524_pntwk_g_pchan__pexid__&cid=aos-us-kwgo-iphone--slid---product-" target="_blank"><img src="product1.jpg" alt="Product 1"></a>
             <h2>iPhone 13 Pro Max</h2>
             <p>The iPhone 13 Pro Max features a 6.7-inch Super Retina XDR display with ProMotion technology, A15 Bionic chip with 6-core CPU and 5-core GPU, 5G connectivity, and advanced camera system with Ultra-Wide, Wide, and Telephoto lenses, Night mode, and ProRes video. The device also offers all-day battery life and is available in four colors.</p>
 			<h3>Price: $1399.99</h3>
@@ -160,26 +160,26 @@
 			</form>
         </div>
         <div class="product">
-            <img src="product2.jpg" alt="Product 2">
+            <a href="https://www.bestbuy.com/site/thermaltake-arctic-i4790-gaming-desktop-intel-core-i9-13900kf-64gb-rgb-memory-nvidia-geforce-rtx-4090-3tb-nvme-m-2-white/6528756.p?skuId=6528756" target="_blank"><img src="product2.jpg" alt="Product 2"></a>
             <h2>Thermaltake - Arctic i4790 Gaming Desktop</h2>
             <p>
 				Built with powerful components to keep your PC hardware icy, the Artic i4790 is equipped with the new 13th Gen Intel Core i9-13900KF and NVIDIA GeForce RTX 4090. Supplemented with 64GB of DDR5 Memory and 3TB of NVMe storage for uncompromised gaming, streaming, and creating experience.</p>
-				<h3>Price: $4499.99</h3>
+				<h3>Price: $4599.99</h3>
 				<form method="POST" action="add_to_cart.php">
 					<button type="submit" name="product_id" value="2">Add to Cart</button>
 				</form>
         </div>
         <div class="product">
-            <img src="product3.jpg" alt="Product 3">
+            <a href="https://www.meta.com/quest/products/quest-2/?utm_source=gg&utm_medium=ps&utm_campaign=18854243668&utm_term=oculus%20quest%202&utm_content=645367787674&utm_funnel=dcap&gclid=Cj0KCQiA6rCgBhDVARIsAK1kGPJOsbuUMe8GKtWARxeOQ40LZUZvP9FDt8Wg2j_ySPWSIJ2kYVwfBuQaArhyEALw_wcB&gclsrc=aw.ds" target="_blank"><img src="product3.jpg" alt="Product 3"></a>
             <h2>Oculus Quest 2</h2>
 			<p>The Oculus Quest 2 is a virtual reality headset that offers wireless VR experiences without the need for a PC or console. The headset features high-resolution displays, six degrees of freedom (6DoF) tracking, and hand controllers for immersive gaming experiences. The Quest 2 also supports social VR experiences and video streaming.</p>
-			<h3>Price: $699.99</h3>
+			<h3>Price: $399.99</h3>
 			<form method="POST" action="add_to_cart.php">
 				<button type="submit" name="product_id" value="3">Add to Cart</button>
 			</form>
         </div>
         <div class="product">
-            <img src="product4.jpg" alt="Product 4">
+            <a href="https://direct.playstation.com/en-us/hardware/ps5?emcid=pa-co-421873&gclid=Cj0KCQiA6rCgBhDVARIsAK1kGPKugK8trpukzKifs1pBxnqr8w_ZsAgMUy79JCld3eKtuPAB3OuRAq8aAhroEALw_wcB&gclsrc=aw.ds" target="_blank"><img src="product4.jpg" alt="Product 4"></a>
             <h2>Sony PlayStation 5</h2>
             <p>The Sony PlayStation 5 is a next-generation video game console that offers immersive gaming experiences with its powerful hardware and innovative DualSense controller. The console features a custom AMD Zen 2 processor, an ultra-high-speed SSD, and up to 16GB of RAM. The PS5 also supports ray tracing and 3D audio, and is compatible with a vast library of games.</p>
 			<h3>Price: $499.99</h3>
@@ -188,7 +188,7 @@
 			</form>
         </div>
         <div class="product">
-            <img src="product5.jpg" alt="Product 5">
+            <a href="https://www.nintendo.com/switch/oled-model/?cid=A1000-01:ch=pdpd&gclid=Cj0KCQiA6rCgBhDVARIsAK1kGPJxEhHdAU3dkcapfZo0JHvcnxnvvgQmSHF7XdQ7_bzJZTNkrgitD9AaAuVBEALw_wcB" target="_blank"><img src="product5.jpg" alt="Product 5"></a>
             <h2>Nintendo Switch OLED Model</h2>
             <p>The Nintendo Switch OLED Model is the latest version of the popular gaming console. It features a 7-inch OLED screen, enhanced audio, and up to 9 hours of battery life. The console offers both handheld and docked modes, and is compatible with a wide range of games.</p>
 			<h3>Price: $349.99</h3>
@@ -197,12 +197,12 @@
 			</form>
         </div>
         <div class="product">
-            <img src="product6.jpg" alt="Product 6">
+            <a href="https://electronics.sony.com/audio/headphones/headband/p/wh1000xm4-b" target="_blank"><img src="product6.jpg" alt="Product 6"></a>
 			<br />
 			<br /><br /><br />
             <h2>Sony WH-1000XM4</h2>
             <p>The Sony WH-1000XM4 is a wireless noise-cancelling headphone that offers advanced noise cancellation and high-quality sound. The headphones feature touch controls, Alexa and Google Assistant integration, and up to 30 hours of battery life. The WH-1000XM4 also comes with a carrying case and a 3.5mm audio cable.</p>
-			<h3>Price: $249.99</h3>
+			<h3>Price: $349.99</h3>
 			<form method="POST" action="add_to_cart.php">
 				<button type="submit" name="product_id" value="6">Add to Cart</button>
 			</form>
